--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -2,6 +2,10 @@ FROM alpine:edge AS builder
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add wget curl git go make \
+        && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /AdGuardHome.tar.gz https://static.adguard.com/adguardhome/release/AdGuardHome_linux_arm64.tar.gz; fi \
+        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /AdGuardHome.tar.gz https://static.adguard.com/adguardhome/release/AdGuardHome_linux_amd64.tar.gz; fi \
+        && tar -zxvf AdGuardHome.tar.gz \
+        && chmod +x /AdGuardHome/AdGuardHome \
         #&& git clone https://github.com/rnetx/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
         && git clone https://github.com/IrineSistiana/mosproxy.git /usr/src/mosproxy && cd /usr/src/mosproxy && go build -o /usr/src/mosproxy/mosproxy \
         && rm -rf /var/cache/apk/*
