--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -10,7 +10,7 @@ RUN set -ex \
         && git clone https://github.com/IrineSistiana/mosproxy.git /usr/src/mosproxy && cd /usr/src/mosproxy && go build -o /usr/src/mosproxy/mosproxy \
         && rm -rf /var/cache/apk/*
 ##### Runtime
-FROM alpine:edge AS runtime
+FROM alpine AS runtime
 ENV MOSPROXY_JSONLOGGER=true
 #COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
 COPY --from=builder /AdGuardHome/AdGuardHome /usr/bin/AdGuardHome
