--- a/cdns/Dockerfile
+++ b/cdns/Dockerfile
@@ -8,8 +8,8 @@ RUN set -ex \
         && chmod +x /AdGuardHome/AdGuardHome \
         #&& git clone https://github.com/rnetx/cdns.git /usr/src/cdns && cd /usr/src/cdns && go build -o /usr/src/cdns/cdns -a -ldflags '-extldflags "-static"' \
         && git clone https://github.com/IrineSistiana/mosproxy.git /usr/src/mosproxy && cd /usr/src/mosproxy && go build -o /usr/src/mosproxy/mosproxy \
-        && wget -O /rules/gfw.conf https://raw.githubusercontent.com/zhuziba/mosdnsrules/main/cdns/gfw.conf \
-        && wget -O /rules/accelerated-domains.china.conf https://raw.githubusercontent.com/zhuziba/mosdnsrules/main/cdns/accelerated-domains.china.conf \
+        && wget -O /tmp/gfw.conf https://raw.githubusercontent.com/zhuziba/mosdnsrules/main/cdns/gfw.conf \
+        && wget -O /tmp/accelerated-domains.china.conf https://raw.githubusercontent.com/zhuziba/mosdnsrules/main/cdns/accelerated-domains.china.conf \
         && rm -rf /var/cache/apk/*
 ##### Runtime
 FROM alpine AS runtime
@@ -17,8 +17,8 @@ ENV MOSPROXY_JSONLOGGER=true
 #COPY --from=builder /usr/src/cdns/cdns /usr/bin/cdns
 COPY --from=builder /AdGuardHome/AdGuardHome /usr/bin/AdGuardHome
 COPY --from=builder /usr/src/mosproxy/mosproxy /usr/bin/mosproxy
-COPY --from=builder /rules/gfw.conf  /rules/gfw.conf 
-COPY --from=builder /rules/accelerated-domains.china.conf /rules/accelerated-domains.china.conf
+COPY --from=builder /tmp/gfw.conf  /rules/gfw.conf 
+COPY --from=builder /tmp/accelerated-domains.china.conf /rules/accelerated-domains.china.conf
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
