--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -5,11 +5,11 @@ RUN set -ex \
         && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -trimpath -o /usr/src/blocky/blocky -a -ldflags '-extldflags "-static"'
 ##### Runtime
 FROM alpine AS runtime
-COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
+#COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget redis bash supervisor \
+        && apk --no-cache add -f ca-certificates tzdata wget redis blocky bash supervisor \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir -p /blocky \
