--- a/clash/Dockerfile
+++ b/clash/Dockerfile
@@ -1,8 +1,12 @@
 FROM alpine:edge AS builder
+ENV clash=1.19.1
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add git wget go \
         && git clone --branch Meta https://github.com/MetaCubeX/mihomo.git /usr/src/mihomo && cd /usr/src/mihomo && go mod download && go build -tags with_gvisor -o /usr/src/mihomo/mihomo -a -ldflags '-extldflags "-static"' \
+        && if [ $(arch) == aarch64 ]; then     wget -P /usr/bin https://github.com/MetaCubeX/mihomo/releases/download/v$clash/mihomo-linux-arm64-v$clash.gz;     gunzip /usr/bin/mihomo-linux-arm64-v$clash.gz;     mv /usr/bin/mihomo-linux-arm64-v$clash /usr/bin/mihomo; fi \
+        && if [ $(arch) == x86_64 ]; then     wget -P /usr/bin https://github.com/MetaCubeX/mihomo/releases/download/v$clash/mihomo-linux-amd64-v$clash.gz;     gunzip /usr/bin/mihomo-linux-amd64-v$clash.gz;     mv /usr/bin/mihomo-linux-amd64-v$clash /usr/bin/mihomo; fi \
+        && chmod +x /usr/bin/mihomo \
         && wget -P /tmp https://github.com/Loyalsoldier/geoip/releases/latest/download/Country.mmdb \
         && wget -P /tmp https://github.com/MetaCubeX/yacd/archive/gh-pages.zip \
         && rm -rf /var/cache/apk/*
@@ -11,7 +15,7 @@ FROM alpine:edge
 ENV iptables=true \
     tun=false
 ADD /script/iptables.sh /tmp/iptables.sh
-COPY --from=builder /usr/src/mihomo/mihomo /usr/bin/mihomo
+COPY --from=builder /usr/bin/mihomo /usr/bin/mihomo
 COPY --from=builder /tmp/Country.mmdb /tmp/Country.mmdb
 COPY --from=builder /tmp/gh-pages.zip  /tmp/gh-pages.zip
 ADD /entrypoint.sh /entrypoint.sh
