--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -19,6 +19,10 @@ jobs:
         docker buildx create --use --name mybuilder
         docker buildx inspect mybuilder --bootstrap
         #docker buildx ls
+    - name: docker drpys
+      run: |
+        cd ./drpys
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/drpys --platform linux/arm64,linux/amd64 . --push
     - name: docker alist
       run: |
         cd ./alist
