--- a/singbox/Dockerfile
+++ b/singbox/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine AS builder
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add git curl go \
-        && go install -v -tags with_clash_api,with_ech,with_utls,with_quic,with_acme github.com/sagernet/sing-box/cmd/sing-box@main \
-        && cp $(go env GOPATH)/bin/sing-box /usr/bin/ \
+        && apk add git curl go sing-box \
+        #&& go install -v -tags with_clash_api,with_ech,with_utls,with_quic,with_acme github.com/sagernet/sing-box/cmd/sing-box@main \
+        #&& cp $(go env GOPATH)/bin/sing-box /usr/bin/ \
         && chmod +x /usr/bin/sing-box
 
 FROM alpine AS runtime
