--- a/singbox/Dockerfile
+++ b/singbox/Dockerfile
@@ -1,6 +1,5 @@
-FROM alpine AS builder
+FROM alpine:edge AS builder
 RUN set -ex \
-        && apk update -f && apk upgrade \
         && apk add git curl go sing-box \
         #&& go install -v -tags with_clash_api,with_ech,with_utls,with_quic,with_acme github.com/sagernet/sing-box/cmd/sing-box@main \
         #&& cp $(go env GOPATH)/bin/sing-box /usr/bin/ \
