--- a/alist/Dockerfile
+++ b/alist/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.22
 VOLUME /opt/alist/data/
 WORKDIR /opt/alist/
 ADD entrypoint.sh /entrypoint.sh
@@ -6,8 +6,8 @@ RUN set -ex \
         && apk update -f && apk upgrade \
         && apk add wget curl su-exec musl-dev tzdata \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.52.0/alist-linux-musl-arm64.tar.gz; fi \
-        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.52.0/alist-linux-musl-amd64.tar.gz; fi \
+        && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.55.0/alist-linux-musl-arm64.tar.gz; fi \
+        && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.55.0/alist-linux-musl-amd64.tar.gz; fi \
         && tar -zxvf /tmp/alist.tar.gz -C /tmp \
         && chmod +x /tmp/alist \
         && chmod +x /entrypoint.sh \
