--- a/alist/Dockerfile
+++ b/alist/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /opt/alist/
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk add wget curl su-exec musl-dev tzdata \
+        && apk add wget curl bash su-exec musl-dev tzdata \
         && echo "Asia/Shanghai" > /etc/timezone \
         && if [ $(arch) == aarch64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.55.0/alist-linux-musl-arm64.tar.gz; fi \
         && if [ $(arch) == x86_64 ]; then      curl -L -H "Cache-Control: no-cache" -o /tmp/alist.tar.gz https://github.com/alist-org/alist/releases/download/v3.55.0/alist-linux-musl-amd64.tar.gz; fi \
