--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -1,9 +1,9 @@
-FROM alpine:edge AS builder
+FROM alpine:3.22AS builder
 RUN set -ex \
         && apk add git go \
         && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -trimpath -o /usr/src/blocky/blocky -a -ldflags '-extldflags "-static"'
 ##### Runtime
-FROM alpine AS runtime
+FROM alpine:3.22 AS runtime
 #COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
