--- a/v2p/Dockerfile
+++ b/v2p/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.22
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/app/node_modules/.bin \
     TZ=Asia/Shanghai
 ADD entrypoint.sh /entrypoint.sh
