--- a/xray/Dockerfile
+++ b/xray/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.22
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f ca-certificates git tzdata curl wget bash unzip nginx supervisor \
