--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -29,7 +29,7 @@ jobs:
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/alist --platform linux/arm64,linux/amd64 . --push
     - name: docker coredns
       run: |
-        cd ./moekoe-music
+        cd ./MoeKoeMusic
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/moekoe-music --platform linux/arm64,linux/amd64 . --push
     - name: docker adguardhome
       run: |
