--- a/MoeKoeMusic/Dockerfile
+++ b/MoeKoeMusic/Dockerfile
@@ -3,7 +3,6 @@ RUN set -ex \
         && apk add git wget go nodejs npm \
         && git clone https://github.com/iAJue/MoeKoeMusic.git  /usr/local/app \
         && cd /usr/local/app && npm install && npm run build:docker \
-        && wget -P /tmp https://github.com/MetaCubeX/yacd/archive/gh-pages.zip \
         && rm -rf /var/cache/apk/*
 
 FROM alpine:3.22
@@ -15,10 +14,10 @@ ADD /nginx.conf /etc/nginx/nginx.conf
 ADD /entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget bash nginx \
+        && apk --no-cache add -f ca-certificates tzdata wget bash nodejs nginx \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && chmod +x /entrypoint.sh
-VOLUME /root/.config/mihomo
-EXPOSE 53 7890 7891 7892 7893 9090
+VOLUME /app
+EXPOSE 8080 6521
 ENTRYPOINT /entrypoint.sh
