--- a/MoeKoeMusic/Dockerfile
+++ b/MoeKoeMusic/Dockerfile
@@ -14,10 +14,12 @@ ADD /nginx.conf /etc/nginx/nginx.conf
 ADD /entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget bash nodejs nginx \
+        && apk --no-cache add -f ca-certificates tzdata wget bash nodejs npm nginx \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && chmod +x /entrypoint.sh
+        && cd /app/api/ && npm install --production \
+        && chmod +x /entrypoint.sh \
+        && rm -rf /var/cache/apk/*
 VOLUME /app
 EXPOSE 8080 6521
 ENTRYPOINT /entrypoint.sh
