--- a/MoeKoeMusic/Dockerfile
+++ b/MoeKoeMusic/Dockerfile
@@ -1,23 +1,26 @@
-FROM alpine:3.22 AS builder
-RUN set -ex \
-        && apk add git wget go nodejs npm \
-        && git clone https://github.com/MoeKoeMusic/MoeKoeMusic.git  /usr/local/app \
-        && cd /usr/local/app && npm install && npm run build:docker \
-        && rm -rf /var/cache/apk/*
+FROM node:18-alpine AS builder
+RUN apk add --no-cache git
+WORKDIR /usr/src
+RUN git clone https://github.com/MoeKoeMusic/MoeKoeMusic.git app
+WORKDIR /usr/src/app
+RUN npm ci && npm run build:docker
 
-FROM alpine:3.22
-COPY --from=builder /usr/local/app/api/ /app/api/
-COPY --from=builder /usr/local/app/dist/ /app/dist/
-ADD /nginx.conf /etc/nginx/nginx.conf
-ADD /entrypoint.sh /entrypoint.sh
-RUN set -ex \
-        && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata bash nodejs npm nginx \
-        && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-        && echo "Asia/Shanghai" > /etc/timezone \
-        && cd /app/api/ && npm install --production \
-        && chmod +x /entrypoint.sh \
-        && rm -rf /var/cache/apk/*
+FROM node:18-alpine
+# nginx + tzdata for timezone support
+RUN apk add --no-cache nginx ca-certificates tzdata
+
+WORKDIR /app
+COPY --from=builder /usr/src/app/api/ /app/api/
+COPY --from=builder /usr/src/app/dist/ /app/dist/
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY entrypoint.sh /entrypoint.sh
+
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
+ && echo "Asia/Shanghai" > /etc/timezone \
+ && cd /app/api && npm ci --production --no-audit --prefer-offline \
+ && chmod +x /entrypoint.sh \
+ && rm -rf /var/cache/apk/* /tmp/*
+
 VOLUME /app
 EXPOSE 8080 6521
-ENTRYPOINT /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
