--- a/MoeKoeMusic/Dockerfile
+++ b/MoeKoeMusic/Dockerfile
@@ -1,11 +1,11 @@
-FROM alpine:3.22 AS builder
+FROM alpine:edge AS builder
 RUN apk add --no-cache git nodejs npm
 WORKDIR /usr/src
 RUN git clone https://github.com/MoeKoeMusic/MoeKoeMusic.git app
 WORKDIR /usr/src/app
 RUN npm install && npm run build:docker
 
-FROM alpine:3.22 AS runtime
+FROM alpine:edge AS runtime
 RUN apk add --no-cache tzdata nginx ca-certificates tzdata nodejs npm
 WORKDIR /app
 COPY --from=builder /usr/src/app/api/ /app/api/
