--- a/drpys/Dockerfile
+++ b/drpys/Dockerfile
@@ -5,7 +5,7 @@ ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f tzdata git bash nodejs yarn curl wget \
-        && apk add --no-cache php83 php83-cli php83-curl php83-mbstring php83-xml php83-pdo php83-pdo_mysql php83-openssl php83-sqlite3 php83-json \
+        && apk add --no-cache php83 php83-cli php83-curl php83-mbstring php83-xml php83-pdo php83-pdo_mysql php83-openssl php83-sqlite3 php83-json python3 \
         && ln -sf /usr/bin/php83 /usr/bin/php \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
